--- a/logClient/css/death.css
+++ b/logClient/css/death.css
@@ -4,35 +4,27 @@
 }
 
 #deathContainer {
-    position: absolute;
-    top: 9px;
-    left: 2px;
-    overflow: hidden;
+	position: absolute;
+	overflow: hidden;
+	top: 0px;
+	left: 0px;
 	
 	border-style: solid;
 	border-color: rgba(0,0,0, 0.5);
 	border-radius: 10px 10px 10px 10px;
 	
-    background: rgba(32,32,32, 0.5);
+	background: rgba(32,32,32, 0.75);
+}
+		
+#nb_death {
+	margin: 2px 2px;
 	
 	font-family: "Agency FB";
-    font-size: 28px;
+	font-size: 28px;
 	color: rgba(255,255,255, 1);
 	text-transform: uppercase;
 }
 
-#deathTable {
-    height: 30px;
-    position: relative;
-    overflow: hidden;
-}
-			
-#nb_death {
-    position: relative;
-    overflow: hidden;
-    text-align: left;
-}
-
 #colortext{
-    color: rgba(182,166,123,1);
+	color: rgba(182,166,123,1);
 }
